--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "apexcharts": "^3.39.0",
     "chart.js": "^4.3.0",
     "d3-geo": "^3.1.0",
@@ -48,12 +49,15 @@
     "recharts": "^2.5.0",
     "redux": "4.2.1",
     "typescript": "4.9.5",
+    "vite": "^4.3.8",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
