--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "react-pro-sidebar": "0.7.1",
     "react-redux": "8.0.5",
     "react-router-dom": "6.11.0",
-    "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.5.0",
     "redux": "4.2.1",
@@ -61,9 +60,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-scripts": "latest"
-  },
+  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
